📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -526,5 +526,29 @@
         "published": "Sun, 07 Dec 2025 11:51:02 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46181076\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/games/839050/simogo-legacy-collection-review-switch-steam",
+        "title": "A love letter to glory days of iPhone gaming",
+        "link": "https://www.theverge.com/games/839050/simogo-legacy-collection-review-switch-steam",
+        "published": "2025-12-07T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It may be hard to believe now, but the App Store was once a thriving place for inventive indie games. The ubiquity of the iPhone coupled with the relative ease of development for the platform meant that smaller studios were able to get their games in front of huge audiences, leading to a great time [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/missing-nbc-on-fubo-heres-how-to-watch-sunday-night-football-this-week-and-more-014052821.html?src=rss",
+        "title": "Missing NBC on Fubo? Here's how to watch Sunday Night Football this week and more",
+        "link": "https://www.engadget.com/entertainment/streaming/missing-nbc-on-fubo-heres-how-to-watch-sunday-night-football-this-week-and-more-014052821.html?src=rss",
+        "published": "Sun, 07 Dec 2025 13:55:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're a Fubo subscriber, you've certainly noticed that NBC and all NBCUniversal-owned channels have gone dark on the platform. For over a week, customers have gone without NBC programming like the <em>Today Show </em>and<em> The Voice</em>, and for the second week in a row, customers will have to find alternate methods of watching this week's <em>Sunday Night Football </em>game, too. It's all because Fubo and NBCUniversal are having a contract dispute, so channels like NBC, USA Network, T"
+    },
+    {
+        "id": "https://www.heise.de/en/news/Goodbye-Microsoft-Schleswig-Holstein-relies-on-Open-Source-and-saves-millions-11105459.html",
+        "title": "Goodbye, Microsoft: Schleswig-Holstein Relies on Open Source and Saves Millions",
+        "link": "https://www.heise.de/en/news/Goodbye-Microsoft-Schleswig-Holstein-relies-on-Open-Source-and-saves-millions-11105459.html",
+        "published": "Sun, 07 Dec 2025 13:21:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46181491\">Comments</a>"
     }
 ]
