📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -590,5 +590,29 @@
         "published": "Sun, 07 Dec 2025 12:23:45 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46181231\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/07/coinbase-starts-onboarding-users-again-in-india-plans-for-fiat-on-ramp-for-next-year/",
+        "title": "Coinbase starts onboarding users again in India, plans for fiat on-ramp next year",
+        "link": "https://techcrunch.com/2025/12/07/coinbase-starts-onboarding-users-again-in-india-plans-for-fiat-on-ramp-for-next-year/",
+        "published": "Sun, 07 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Coinbase is exploring expansion into India with a staggered relaunch and hiring for different roles."
+    },
+    {
+        "id": "https://gizmodo.com/the-boys-will-supe-it-up-one-last-time-in-april-2026-2000696511",
+        "title": "\u2018The Boys\u2019 Will Supe It Up One Last Time in April 2026",
+        "link": "https://gizmodo.com/the-boys-will-supe-it-up-one-last-time-in-april-2026-2000696511",
+        "published": "Sun, 07 Dec 2025 15:30:02 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"The Boys Homelander\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/the-boys-homelander.jpg\" width=\"1920\" /><br /><br />Prepare to say goodbye or 'RIP' to Butcher, Homelander, and the rest of the gang when 'The Boys' ends next spring."
+    },
+    {
+        "id": "https://eclecticlight.co/2025/12/04/the-anatomy-of-a-macos-app/",
+        "title": "The Anatomy of a macOS App",
+        "link": "https://eclecticlight.co/2025/12/04/the-anatomy-of-a-macos-app/",
+        "published": "Sun, 07 Dec 2025 12:31:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46181268\">Comments</a>"
     }
 ]
