📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -662,5 +662,37 @@
         "published": "Sun, 07 Dec 2025 15:08:17 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46182202\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/x-shuts-down-the-european-commissions-ad-account-the-day-after-major-fine-173553267.html?src=rss",
+        "title": "X shuts down the European Commission\u2019s ad account the day after major fine",
+        "link": "https://www.engadget.com/social-media/x-shuts-down-the-european-commissions-ad-account-the-day-after-major-fine-173553267.html?src=rss",
+        "published": "Sun, 07 Dec 2025 17:35:53 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Just a day after receiving a roughly <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/big-tech/x-hit-with-140-million-fine-from-the-eu-161259324.html\">$140 million fine</a>, X has terminated the ad account of the European Commission. <a class=\"no-affiliate-link\" href=\"https://x.com/nikitabier/status/1997450541275005041?s=20\">Nikita Bier</a>, X's head of product, accused the European Commission of using an exploit to artificially boost the reach of <a class=\"no-affiliate-link\" href="
+    },
+    {
+        "id": "https://gizmodo.com/a-new-starfleet-academy-clip-lets-paul-giamatti-go-wild-2000696525",
+        "title": "A New \u2018Starfleet Academy\u2019 Clip Lets Paul Giamatti Go Wild",
+        "link": "https://gizmodo.com/a-new-starfleet-academy-clip-lets-paul-giamatti-go-wild-2000696525",
+        "published": "Sun, 07 Dec 2025 17:25:54 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Starfleet Academy Giamatti\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/starfleet-academy-giamatti.jpg\" width=\"1920\" /><br /><br />Looks like Giamatti's having a ball as a bad guy on 'Starfleet Academy' with an axe to grind against Holly Hunter."
+    },
+    {
+        "id": "https://mashable.com/article/meta-phoenix-mixed-reality-glasses-delayed",
+        "title": "Metas Phoenix mixed reality glasses delayed to 2027",
+        "link": "https://mashable.com/article/meta-phoenix-mixed-reality-glasses-delayed",
+        "published": "Sun, 07 Dec 2025 17:37:25 +0000",
+        "source": "Mashable",
+        "summary": "The company is pushing the rumored project to 2027 as Meta focuses on internal updates."
+    },
+    {
+        "id": "https://j0nah.com/i-failed-to-recreate-the-1996-space-jam-website-with-claude/",
+        "title": "I Tried and Failed to Rebuild the 1996 Space Jam Website with Claude",
+        "link": "https://j0nah.com/i-failed-to-recreate-the-1996-space-jam-website-with-claude/",
+        "published": "Sun, 07 Dec 2025 17:18:54 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46183294\">Comments</a>"
     }
 ]
