📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -694,5 +694,13 @@
         "published": "Sun, 07 Dec 2025 17:18:54 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46183294\">Comments</a>"
+    },
+    {
+        "id": "https://betterexplained.com/articles/an-interactive-guide-to-the-fourier-transform/",
+        "title": "An Interactive Guide to the Fourier Transform",
+        "link": "https://betterexplained.com/articles/an-interactive-guide-to-the-fourier-transform/",
+        "published": "Tue, 02 Dec 2025 06:50:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46118358\">Comments</a>"
     }
 ]
