📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -742,5 +742,37 @@
         "published": "Sun, 07 Dec 2025 19:17:17 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46184229\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/07/netflix-co-ceo-reportedly-discussed-warner-bros-deal-with-trump/",
+        "title": "Netflix co-CEO reportedly discussed Warner Bros. deal with Trump",
+        "link": "https://techcrunch.com/2025/12/07/netflix-co-ceo-reportedly-discussed-warner-bros-deal-with-trump/",
+        "published": "Sun, 07 Dec 2025 20:46:53 +0000",
+        "source": "TechCrunch",
+        "summary": "Will Netflix\u2019s $82.7 billion deal to acquire Warner Bros. get approval from federal regulators? While Paramount was assumed to be the frontrunner to acquire the storied movie studio thanks to CEO David Ellison\u2019s connections to the Trump administration, new reporting in Bloomberg and The Hollywood Reporter suggests that Netflix co-CEO Ted Sarandos met with President [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/839742/x-cuts-off-the-european-commissions-ad-account",
+        "title": "X cuts off the European Commission\u2019s ad account after being fined \u20ac120 million",
+        "link": "https://www.theverge.com/news/839742/x-cuts-off-the-european-commissions-ad-account",
+        "published": "2025-12-07T15:52:37-05:00",
+        "source": "The Verge",
+        "summary": "Friday, the EU slapped X with a \u20ac120 million fine (about $140 million) for violating the Digital Services Act (DSA). It was the first time that a company had been hit with a penalty for running afoul of the law. Elon Musk responded with his trademark tact and professionalism by posting \u201cBullshit\u201d on X in [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/tv-movies/the-lord-of-the-rings-trilogy-returns-to-theaters-in-january-for-25th-anniversary-202433217.html?src=rss",
+        "title": "The Lord of the Rings trilogy returns to theaters in January for 25th anniversary",
+        "link": "https://www.engadget.com/entertainment/tv-movies/the-lord-of-the-rings-trilogy-returns-to-theaters-in-january-for-25th-anniversary-202433217.html?src=rss",
+        "published": "Sun, 07 Dec 2025 20:24:34 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>One does not simply spend more than 11 hours watching <a href=\"https://www.youtube.com/watch?v=QZbG3_mYEn4\">The Lord of the Rings trilogy</a>  in a single weekend at home when the opportunity to do so in theaters arises. As <em>The Lord of the Rings: The Fellowship of the Ring</em> turns 25, Fathom Entertainment and Warner Bros. announced theatrical screenings of the Peter Jackson trilogy in their extended editions, according to an exclusive report from <a class=\"no-affiliate-link\" href=\"http"
+    },
+    {
+        "id": "https://github.com/researchxxl/syncthing-android/issues/16",
+        "title": "Syncthing-Android have had a change of owner/maintainer",
+        "link": "https://github.com/researchxxl/syncthing-android/issues/16",
+        "published": "Sun, 07 Dec 2025 20:15:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46184730\">Comments</a>"
     }
 ]
