📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -774,5 +774,29 @@
         "published": "Sun, 07 Dec 2025 20:15:26 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46184730\">Comments</a>"
+    },
+    {
+        "id": "https://gizmodo.com/rip-dead-space-again-2000696495",
+        "title": "RIP, \u2018Dead Space\u2019\u2026.Again (2008-2023)",
+        "link": "https://gizmodo.com/rip-dead-space-again-2000696495",
+        "published": "Sun, 07 Dec 2025 21:15:22 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Dead Space Hed2\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/dead-space-hed2.jpg\" width=\"1920\" /><br /><br />Unless EA decides to sell off the 'Dead Space' IP to someone else, the sci-fi horror series has died a second death."
+    },
+    {
+        "id": "https://www.stroustrup.com/JSF-AV-rules.pdf",
+        "title": "F-35 Fighter Jet's C++ Coding Standards [pdf]",
+        "link": "https://www.stroustrup.com/JSF-AV-rules.pdf",
+        "published": "Sun, 07 Dec 2025 21:34:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46185393\">Comments</a>"
+    },
+    {
+        "id": "https://www.theguardian.com/us-news/2025/dec/03/customers-pay-more-rising-dollar-store-costs",
+        "title": "Dollar-stores overcharge cash-strapped customers while promising low prices",
+        "link": "https://www.theguardian.com/us-news/2025/dec/03/customers-pay-more-rising-dollar-store-costs",
+        "published": "Sun, 07 Dec 2025 14:37:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46181962\">Comments</a>"
     }
 ]
