📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -838,5 +838,13 @@
         "published": "Sun, 07 Dec 2025 21:55:01 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46185576\">Comments</a>"
+    },
+    {
+        "id": "https://troubled.engineer/posts/no-ads/",
+        "title": "How I block all online ads",
+        "link": "https://troubled.engineer/posts/no-ads/",
+        "published": "Sun, 07 Dec 2025 22:18:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46185816\">Comments</a>"
     }
 ]
